--- a/root_day4/assignments.html
+++ b/root_day4/assignments.html
@@ -28,7 +28,7 @@
     <article>
       <h1>Assignments</h1>
       <p>A1: This is it. uhhh</p>
-      <P>N/A</P>
+      <a href="assignments/gridDesign.html">A2: Midcentury Design</a>
       <p>N/A</p>
       <p>N/A</p>
       <p>N/A</p>
