--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Midterm - Final Website Proposal</h1>
-    <h2>Steve Berthiaume</h2>
+    <h2>Midterm | Final Project Proposal</h2>
   </header>
 
   <nav>
@@ -22,29 +21,20 @@
   </nav>
 
   <article>
-    <h1>Bio</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum doloribus eaque voluptate, enim fuga ullam possimus ratione, aliquam, provident odio beatae magni! Consequuntur dolore cumque reprehenderit minima nostrum magnam hic.</p>
-
+    <h1>Project Description</h1>
+    <p>Starting in 2020, we've been faced with what may be the single most important challenge of our lives: COVID-19. While health professionals have made it very clear that we need to maintain social distancing as well as masks in order to keep eachother safe, the safest option of all has remained to simply abstain from being in public places.</p>
     <figure>
-      <img src="images/biobird.jpg" alt="hummingbird">
+      <img src="images/covidgraph.png" alt="COVID-19 Deaths in Quebec">
       <figcaption>
-        what a nice bird.
+        Note the fact that places caring for the elderly are the highest in deaths, and that schools replicate many issues seen there.
       </figcaption>
     </figure>
+    <p>We have proof for the dangers of being in enclosed spaces with few supervising officials; one only has to look at the nursing home crisis we've had, with countless elderly succumbing to COVID-19, as well as other complications as collateral from this unprecedented health crisis. Simply put, there aren't enough professionals there to keep watch, enforce rules, and keep safe themselves.</p>
+    <p>Despite the dangers, the government of Quebec has chosen to send elementary and high school students back to school. Of course, this is also while the education system, as with many other sectors, is suffering from an extreme lack of staff. Beyond that, children are prone to inadvertedly spreading the disease, being that they may be unaware of the required rules, unaware of the severity of the consequences, or too lacking in developed empathy to understand why they should care.</p>
+    <p>My point? Don't send them back to schools.</p>
 
-    <p>Nostrum ipsa perferendis accusamus deserunt illum voluptates nemo quidem inventore, libero fugit iure consequatur dicta officiis aliquid. Aperiam perferendis asperiores veniam veritatis nulla molestiae cum, labore, dolores illo debitis eveniet.</p>
-    <h2>Subsection</h2>
-    <p>Natus fugiat, ad laborum eum eos temporibus quam officia debitis ipsam tempore consequatur nam excepturi quo dolore enim, ipsum sed mollitia facere quos voluptatibus recusandae illum obcaecati. Reiciendis molestias, incidunt.</p>
-
-    <p>Corporis nisi saepe rerum laboriosam eligendi tenetur, sed, dolor magni nostrum nemo obcaecati sint mollitia dignissimos a voluptatibus aperiam fugit porro explicabo possimus eos illo. Libero quod id cum quasi?</p>
-    <p class="pull_quote">this is a special paragraph</p>
-    <p>Dolores, autem. Voluptatum, sed. Dolorem laborum sed dolorum, tempora quaerat vero? Hic sed corporis dolor veniam, ea facere cumque, iure facilis ullam explicabo provident cupiditate pariatur. Dolorum repellendus facilis, enim!</p>
-    <h2>Subsection Two</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum aut modi voluptatibus. Minus atque molestiae quisquam praesentium eligendi commodi. Hic reiciendis consequuntur modi fugiat pariatur nam libero nihil excepturi corporis.</p>
-    <p>A nihil, veniam? Deserunt, maxime. Obcaecati, illo. Aspernatur amet esse sequi dolorem ab magnam consequuntur facilis, accusamus nulla dolor ratione officiis facere doloribus recusandae dolore porro id quibusdam obcaecati voluptas.</p>
-    <p>Ducimus sed minus quos quibusdam, aut earum dolores, sunt distinctio reprehenderit deleniti aliquam molestias laudantium. Temporibus totam doloribus perspiciatis provident cum, facere adipisci rem commodi quidem libero. Labore, esse, atque.</p>
+    <!-- <p class="pull_quote">this is a special paragraph</p> -->
   </article>
-
   <footer>
     Steve Berthiaume | @Steve9hw2
   </footer>
