--- a/midterm/essay.html
+++ b/midterm/essay.html
@@ -13,8 +13,8 @@
   </header>
 
   <nav>
-    <a href="index.html" class="active">Home</a>
-    <a href="essay.html">Essay</a>
+    <a href="index.html">Home</a>
+    <a href="essay.html" class="active">Essay</a>
     <a href="wireframe.html">Wireframe</a>
     <a href="styleguide.html">Style</a>
     <a href="https://steve9hw2.github.io/cart211/root_day4/index.html">Return</a>
@@ -22,12 +22,19 @@
 
   <article>
     <h1>Research Essay</h1>
-    <p>Starting in 2020, we've been faced with what may be the single most important challenge of our lives: COVID-19. While health professionals have made it very clear that we need to maintain social distancing as well as masks in order to keep eachother safe, the safest option of all has remained to simply abstain from being in public places.</p>
-    <p>We have proof for the dangers of being in enclosed spaces with few supervising officials; one only has to look at the nursing home crisis we've had, with countless elderly succumbing to COVID-19, as well as other complications as collateral from this unprecedented health crisis. Simply put, there aren't enough professionals there to keep watch, enforce rules, and keep safe themselves.</p>
-    <p>Despite the dangers, the government of Quebec has chosen to send elementary and high school students back to school. Of course, this is also while the education system, as with many other sectors, is suffering from an extreme lack of staff. Beyond that, children are prone to inadvertedly spreading the disease, being that they may be unaware of the required rules, unaware of the severity of the consequences, or too lacking in developed empathy to understand why they should care.</p>
-    <p>My point? Don't send them back to schools.</p>
-
+    <p>SARS-CoV-2, referred to by many other names such as COVID19 (the disease it causes), or simply the novel coronavirus by the layman, has drastically impacted our daily lives. Even ignoring the devastating impacts on the populace’s mental health, the disease has wrecked havoc due to its long incubation period and ability to remain on surfaces for upwards of 48 hours. Healthcare professionals worldwide have warned us about the need for social distancing and the wearing of masks, and the importance of remaining at home. Unfortunately, it would seem the government of Quebec is being hypocritical by following procedures and simultaneously sending children back to schools, where the measures have no way of being wholly enforced for their safety.</p>
+    <p>First, I’d like to establish why even sending children to schools is a mistake. While it’s obvious that many of us will inevitably catch COVID19, the most vital institution to protect is our hospitals, given they need to tend to the severely ill. This means we need to try to minimize infections, something which staying at home can aid with, as shown by Pinar Keskinocak and his associates: “Scenarios 1–9 show that shelter-in-place could significantly slow down the disease spread, protecting public health, and offering the opportunity for better preparedness of healthcare resource capacity.” (Keskinocak et al. par. 31) What this means is that, considering the oncoming flu season and the ease at which diseases can spread in enclosed spaces, it would be much easier for hospitals to aid COVID19 patients if there were less people at risk of spreading the disease – which includes students in schools.</p>
+    <p>Another important point of note is how obsessed our society seems to be with efficient education, in the sense that time not spent in classes is wasted. This conception of education has remained quite static, though COVID19 has seemingly changed things. As Michael Mindzak puts it: “Instead of attempting to quickly move back into previous habits, norms, and practices could we instead actually begin to conceptualize what inefficient education might look like?” (21). What Mindzak alludes to is the fact that we’ve attached ourselves to a certain preconception of education as being one nonstop, streamlined path for students to take. This approach is, of course, not the same worldwide and fails to consider the needs of individuals, or the possible necessity for change. Of course, this isn’t the only explanation for the prompt reopening of schools in Quebec, or indeed anywhere. </p>
+    <p>According to Vikram Patel, mental health is one factor that must be acknowledged. As he writes: “Certainly, a rise in the burden of clinically significant mental health problems is what we should expect as the impact of the economic recession, the widening of inequalities in countries, the continuing uncertainties about future waves of the epidemic and the physical distancing policies begin to bite deeper into our mental health” (par. 4). What he fails to mention, however, is that young people are not immune to mental health disorders, and with young teens especially, are not unaware of the terrifying crisis that surrounds them. Consider the position of a Quebec teenager, having to return to schools, aware of the dangers of the virus and possibly concerned about catching it and spreading it to their family, left with no real alternative and having the quality of their education treated as less important than a daycare. Surely, in that position, one would feel a great deal of stress and frustration.</p>
+    <p>Looking at the various papers written on the topic of COVID19 already, I believe it’s incredibly irresponsible of the Quebec government to send students back to schools. They have a risk of spreading the illness, would likely benefit from an alternate form of education, and are not immune to mental health issues thar arise from being in such a stressful situation. Quebec needs to realize that schools are more than just daycares, and that education can be conducted in a variety of ways. We should be using this opportunity to better our education systems, not retreat to them irresponsibly.</p>
     <!-- <p class="pull_quote">this is a special paragraph</p> -->
+  </article>
+  <article class="two">
+    <h3>Works Cited</h3>
+    <p>Keskinocak, Pinar, et al. The impact of social distancing on COVID19 spread: State of Georgia case study. PLOS ONE, Oct 12 2020, https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0239798. Accessed Oct 29, 2020.</p>
+    <p>Mindzak, Michael. “COVID19 & the Ongoing Problem of Educational Efficiency”. Brock Education: A Journal of Educational Research & Practice, Vol. 29 No. 2, September 4th 2020. https://journals.library.brocku.ca/brocked/index.php/home/article/view/837, Accessed Oct 29, 2020.</p>
+    <p>Patel, Vikram. Empowering Global Mental Health in the Time of COVID19. Asian Journal of Psychiatry, Volume 51, June 2020. https://doi.org/10.1016/j.ajp.2020.102160, Accessed Oct 29, 2020</p>
+    <a href="211ResearchPaper_SteveBerthiaume.docx" download>Essay Download</a>
   </article>
   <footer>
     Steve Berthiaume | @Steve9hw2
