--- a/midterm/styleguide.html
+++ b/midterm/styleguide.html
@@ -13,10 +13,10 @@
   </header>
 
   <nav>
-    <a href="index.html" class="active">Home</a>
+    <a href="index.html">Home</a>
     <a href="essay.html">Essay</a>
     <a href="wireframe.html">Wireframe</a>
-    <a href="styleguide.html">Style</a>
+    <a href="styleguide.html"class="active">Style</a>
     <a href="https://steve9hw2.github.io/cart211/root_day4/index.html">Return</a>
   </nav>
 
@@ -32,8 +32,10 @@
     <p>NRA - Share the safety -</p>
     <p>Share the safety is interesting in that absolutely everything on the page is attributed to the NRA. Despite being a parody, there are essentially no signs that the sign is fake, leaving one to wonder if it's an actual page by the NRA. I like that effect and would like to try it, though I'd have an indication at least somewhere to avoid issues from impersonating the government.</p>
     <a href="https://sharethesafety.org/">Share the Safety</a>
-    <p>*another inspiration*</p>
-    <a href="">another link</a>
+    <p>Looking at the work of other activists, the WWF has made numerous articles on oil companies, one of which (linked below) interests me as it pairs fixed images with fixed text, and also uses a simple appearing image, without taking awya from the seriousness of the topic.</p>
+    <a href="https://arcticwwf.org/newsroom/stories/shell-says-one-thing-and-does-another-when-it-comes-to-cleaning-up-their-act-in-the-arctic/">WWF Shell Article</a>
+    <p>As for what I'm seeking to directly immitate, the site I took my style information from is linked below here. Most sites run by the government of Quebec utilize the same color scheme and font choices, so immitating one means immitating them all.</p>
+    <a href="https://www.quebec.ca/sante/problemes-de-sante/a-z/coronavirus-2019/">Quebec COVID-19 Page</a>
 
     <!-- <p class="pull_quote">this is a special paragraph</p> -->
   </article>
