Connected link to midterm site.

--- a/root_day4/assignments.html
+++ b/root_day4/assignments.html
@@ -29,7 +29,7 @@
       <h1>Assignments</h1>
       <p>A1: This is it. uhhh</p>
       <a href="assignments/gridDesign.html">A2: Midcentury Design</a>
-      <p>N/A</p>
+      <a href="https://steve9hw2.github.io/cart211/midterm/index.html">A3: Final Project Proposal</a>
       <p>N/A</p>
       <p>N/A</p>
     </article>
