--- a/final/index.html
+++ b/final/index.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Safe in schools | Gouvernement du Québec</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <header>
+    <banner>
+      <container class="blue">
+        <container class="bluetwo">
+          <button>
+            <img src="images/quebec.png" alt="Logo du gouvernement du Québec." width="199" height="60">
+          </button>
+        </container>
+      </container>
+    </banner>
+  </header>
 </body>
 </html>
