--- a/final/index.html
+++ b/final/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Safe in schools | Gouvernement du Québec</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="https://www.quebec.ca.icon">
 </head>
 <body>
   <header>
