Some things added?

--- a/final/index.html
+++ b/final/index.html
@@ -6,19 +6,69 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Safe in schools | Gouvernement du Québec</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="https://www.quebec.ca.icon">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 </head>
 <body>
   <header>
-    <banner>
-      <container class="blue">
-        <container class="bluetwo">
-          <button>
+    <div class="banner">
+      <div class="headcontainerone">
+        <div class="headcontainertwo">
+          <button onclick="functionOne()" onmouseover="" style="cursor: pointer;">
             <img src="images/quebec.png" alt="Logo du gouvernement du Québec." width="199" height="60">
           </button>
-        </container>
-      </container>
-    </banner>
+          <script>
+            function functionOne() {
+            }
+          </script>
+        </div>
+      </div>
+      <div class="header">
+        <div class="directory">
+          <p> Home / Education / Preschool, elementary and secondary schools / Safe in schools initiative</p>
+        </div>
+        <div class="title">
+        <h1>Safe in Schools Initiative</h1>
+        <div class="orange">
+          <p>nothing</p>
+        </div>
+        </div>
+      </div>
+    </div>
   </header>
+  <article class="bgimage">
+      <h2>background image</h2>
+  </article>
+  <article class="boxes">
+    <button class="box1"onmouseover="" style="cursor: pointer;">
+      <img src="images/fauxQCapple.png" alt="">
+      <h3>Measures for educators</h3>
+    </button>
+    <button class="box2"onmouseover="" style="cursor: pointer;">
+      <img src="images/fauxQCboard.png" alt="">
+      <h3>Student conduct guide</h3>
+    </button>
+    <button class="box3"onmouseover="" style="cursor: pointer;">
+      <img src="images/fauxQCgraph.png" alt="">
+      <h3>Effectiveness</h3>
+    </button>
+    <button class="box4"onmouseover="" style="cursor: pointer;">
+      <img src="images/fauxQCexclaim.png" alt="">
+      <h3>Addressing concerns</h3>
+    </button>
+  </article>
 </body>
 </html>
+
+<!-- Code references -
+
+Pointer changing -
+https://stackoverflow.com/questions/8809909/change-cursor-to-finger-pointer
+
+Custom favicon -
+https://stackoverflow.com/questions/4888377/how-to-add-a-browser-tab-icon-favicon-for-a-website
+
+Bug Fixes -
+CSS Width - https://stackoverflow.com/questions/6317215/width-100-without-scrollbars
+
+
+ -->
