Main page tweaks
Still needs work before it's finished and I move onto the actual content.

--- a/final/index.html
+++ b/final/index.html
@@ -88,8 +88,25 @@
   </article>
 
   <article class="goal">
-    <h2>The Goal</h2>
+    <article class="goalcontainer">
+      <article class="goaltext">
+        <h2>The Goal</h2>
+        <p>Nothing is more important than the wellbeing of our youth. To help our youth continue with their education and grow as individuals, we've sought to send them back to school. The goal of the Safe in Schools initiative is to make this process as safe and effective as possible. For more information about the measures of the program, see the link below.</p>
+        <a href="">Safety Measures</a>
+      </article>
+    </article>
+    <article class="centerimage">
+      <article class="centerimagebackground">
+        <article class="textoverlay">
+          <h2>The Benefits</h2>
+          <p>Sending children back to school allows their learning to continue, without interruption. This initiative will also push schools to hire new teachers, creating jobs. Of course, this will all allow parents to go to work in good conscience, knowing their children are completely safe.</p>
+        </article>
+      </article>
+    </article>
   </article>
+  <footer>
+    <p>Quebec</p>
+  </footer>
 </body>
 </html>
 
@@ -103,8 +120,16 @@ https://stackoverflow.com/questions/4888377/how-to-add-a-browser-tab-icon-favico
 
 Bug Fixes -
 CSS Width - https://stackoverflow.com/questions/6317215/width-100-without-scrollbars
+Hide overflow - https://stackoverflow.com/questions/26003392/css-100-width-is-more-that-100/48795048
 
 Shadows -
 https://www.w3schools.com/css/css3_buttons.asp
+
+Borders -
+https://www.w3schools.com/css/css_border.asp
+
+Unchanging height -
+https://stackoverflow.com/questions/4967613/height-style-property-doesnt-work-in-div-elements
+
 
  -->
