Main page fixed

--- a/final/index.html
+++ b/final/index.html
@@ -13,13 +13,11 @@
     <div class="banner">
       <div class="headcontainerone">
         <div class="headcontainertwo">
-          <button onclick="functionOne()" onmouseover="" style="cursor: pointer;">
+          <a href="index.html">
+          <button  onmouseover="" style="cursor: pointer;">
             <img src="images/quebec.png" alt="Logo du gouvernement du Québec." width="199" height="60">
           </button>
-          <script>
-            function functionOne() {
-            }
-          </script>
+          </a>
         </div>
       </div>
       <div class="header">
@@ -41,17 +39,20 @@
   <article class="boxcontainer">
   <article class="boxes">
     <article class="box1">
+      <a href="measures.html">
     <button class="box1"onmouseover="" style="cursor: pointer;">
       <img src="images/fauxQCapple.png" alt="">
       <div class="text">
         <h3>Measures for educators</h3>
         <div class="par">
-          <p>Tools and guides for new and returning educators.</p>
+          <p>Tools and guides for new and returning educators across Québec.</p>
         </div>
       </div>
     </button>
+    </a>
     </article>
     <article class="box2">
+    <a href="conduct.html">
     <button class="box2"onmouseover="" style="cursor: pointer;">
       <img src="images/fauxQCboard.png" alt="">
       <div class="text">
@@ -61,8 +62,10 @@
         </div>
       </div>
     </button>
+    </a>
     </article>
     <article class="box3">
+    <a href="effectiveness.html">
     <button class="box3"onmouseover="" style="cursor: pointer;">
       <img src="images/fauxQCgraph.png" alt="">
       <div class="text">
@@ -72,8 +75,10 @@
       </div>
     </div>
     </button>
+    </a>
     </article>
     <article class="box4">
+    <a href="faq.html">
     <button class="box4"onmouseover="" style="cursor: pointer;">
       <img src="images/fauxQCexclaim.png" alt="">
       <div class="text">
@@ -83,10 +88,10 @@
         </div>
       </div>
     </button>
+    </a>
     </article>
   </article>
   </article>
-
   <article class="goal">
     <article class="goalcontainer">
       <article class="goaltext">
@@ -95,6 +100,7 @@
         <a href="">Safety Measures</a>
       </article>
     </article>
+  <article class="benefits">
     <article class="centerimage">
       <article class="centerimagebackground">
         <article class="textoverlay">
@@ -105,8 +111,12 @@
     </article>
   </article>
   <footer>
-    <p>Quebec</p>
+    <article class="footimg">
+        <img src="images/quebeccolor.png" alt="Logo du gouvernement du Québec." width="130" height="40">
+    </article>
   </footer>
+  </article>
+
 </body>
 </html>
 
@@ -117,6 +127,9 @@ https://stackoverflow.com/questions/8809909/change-cursor-to-finger-pointer
 
 Custom favicon -
 https://stackoverflow.com/questions/4888377/how-to-add-a-browser-tab-icon-favicon-for-a-website
+
+Image links -
+https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_image
 
 Bug Fixes -
 CSS Width - https://stackoverflow.com/questions/6317215/width-100-without-scrollbars
@@ -130,6 +143,9 @@ https://www.w3schools.com/css/css_border.asp
 
 Unchanging height -
 https://stackoverflow.com/questions/4967613/height-style-property-doesnt-work-in-div-elements
+https://stackoverflow.com/questions/37287506/scrollbar-not-scrolling-completely-down-the-page
 
+Random white space -
+https://eggplantstudios.ca/2012/fixing-a-blank-white-space-at-the-bottom-of-your-website/
 
  -->
