--- a/final/conduct.html
+++ b/final/conduct.html
@@ -33,13 +33,13 @@
       </div>
     </div>
   </header>
-  <article class="bgimage">
+  <article class="bgimage2">
 
   </article>
 
-  <article class="goal">
-    <article class="goalcontainer">
-      <article class="goaltext">
+  <article class="long">
+    <article class="longcontainer">
+      <article class="longtext">
         <h2>Students</h2>
         <p>While returning to school amidst a global pandemic may be frightening, there are numerous safety measures in place to ensure student safety. As such, students should follow the following rules in order to guarantee the wellbeing of themselves and the school staff.</p>
         <p>- Respect social distancing</p>
@@ -50,16 +50,18 @@
         <p>- Ignore social distancing the moment you leave school grounds</p>
         <p>- Ignore self-quarantine to attend a useless class</p>
         <p>Should all these measures be followed, students should be just as safe as anybody else who doesn't care about others.</p>
-
-      </article>
-    </article>
-  <article class="conduct">
-    <article class="conductcontainer">
-      <article class="conducttext">
         <h2>Teachers</h2>
+        <p>School staff should follow the following rules in order to assure the safety of students.</p>
+        <p>- Supervise every single student</p>
+        <p>- Enforce every single rule</p>
+        <p>- Ignore the student rules yourself</p>
+        <p>- Ignore concerns from parents</p>
+        <p>- Survive on stagnating wages</p>
+        <p>- Come out of retirement to risk your life</p>
+        <p>Staff are expected to follow these rules to the letter, to ensure the success of the Safe in Schools initiative.</p>
       </article>
     </article>
-  </article>
+
   <footer>
     <article class="footimg">
         <img src="images/quebeccolor.png" alt="Logo du gouvernement du Québec." width="130" height="40">
