--- a/root_day4/assignments.html
+++ b/root_day4/assignments.html
@@ -27,11 +27,11 @@
   <section class="ass">
     <article>
       <h1>Assignments</h1>
+      <p>A list of assignments for CART 211.</p>
       <p>A1: This is it. uhhh</p>
       <a href="assignments/gridDesign.html">A2: Midcentury Design</a>
       <a href="https://steve9hw2.github.io/cart211/midterm/index.html">A3: Final Project Proposal</a>
-      <p>N/A</p>
-      <p>N/A</p>
+      <a href="https://steve9hw2.github.io/cart211/final/index.html">A4: Final</a>
     </article>
   </section>
 
