--- a/root_day4/exercises.html
+++ b/root_day4/exercises.html
@@ -20,7 +20,7 @@
     <a href="assignments.html">CART 211 Assignments</a>
     <a href="exercises.html">CART 211 Exercises</a>
     <a href="readings.html">CART 211 Readings</a>
-    <a href="works.html">Works</a>
+    <a href="works.html">Games</a>
     <a href="contact.html">Contact</a>
   </section>
 
@@ -28,6 +28,7 @@
     <a href="week1/index.html">Week One</a>
     <a href="week2/index.html">Week Two</a>
     <a href="week3/index.html">Week Three</a>
+    <a href="transitions.html">Transitions</a>
   </section>
 
 
@@ -37,6 +38,7 @@
       <a href="week1/index.html">Week One</a>
       <a href="week2/index.html">Week Two</a>
       <a href="week3/index.html">Week Three</a>
+      <a href="transitions.html">Transition Test</a>
     </article>
   </section>
 
