--- a/root_day4/works.html
+++ b/root_day4/works.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Works | Steve Berthiaume</title>
+  <title>Games | Steve Berthiaume</title>
 </head>
 <body>
 <link rel="stylesheet" href="css/style.css">
   <section class="header_lrg">
     <header>
-      <h2>Works</h2>
+      <h2>Games</h2>
       <h1>Steve Berthiaume</h1>
     </header>
   </section>
@@ -20,18 +20,22 @@
     <a href="assignments.html">CART 211 Assignments</a>
     <a href="exercises.html">CART 211 Exercises</a>
     <a href="readings.html">CART 211 Readings</a>
-    <a href="works.html">Works</a>
+    <a href="works.html">Games</a>
     <a href="contact.html">Contact</a>
   </section>
 
   <section class="ass">
     <article>
       <h1>Works</h1>
-      <p>uh</p>
-      <p>hm</p>
-      <p>maybe i should link inventory manager</p>
-      <p>uhhh, that's through drive tho</p>
-      <p>hm. maybe when there's a sequel</p>
+      <a href="https://drive.google.com/file/d/1ENm-q2xzTE8nCEZIYR8MwK4sB-o0aCZ0/view?usp=sharing">Inventory Manager (Legacy)</a>
+      <a href="https://drive.google.com/file/d/1lKYGPZXydEczdBuie1nHV2OJJV9wCBTh/view?usp=sharing">Root Fruit Rules (pdf)</a>
+      <a href="shadow_island.html">Shadow Island</a>
+      <a href="https://drive.google.com/file/d/1maKywUsgOQCD2x6-xG8T2t2tTTVoIwJo/view?usp=sharing">Solitude</a>
+      <p>Inventory Manager 2 [PLANNED]</p>
+      <p>Project 2012 [PLANNED]</p>
+      <p>Lemmings [PLANNED]</p>
+      <p>Shadow Island Redux [PLANNED]</p>
+      <p>Solitude Redux [PLANNED]</p>
     </article>
   </section>
 
