--- a/root_day4/index.html
+++ b/root_day4/index.html
@@ -20,7 +20,7 @@
     <a href="assignments.html">CART 211 Assignments</a>
     <a href="exercises.html">CART 211 Exercises</a>
     <a href="readings.html">CART 211 Readings</a>
-    <a href="works.html">Works</a>
+    <a href="works.html">Games</a>
     <a href="contact.html">Contact</a>
   </section>
 
