--- a/final/effectiveness.html
+++ b/final/effectiveness.html
@@ -41,9 +41,10 @@
     <article class="longcontainer">
       <article class="longtext">
         <h2>The Results</h2>
-        <p>As can be clearly seen from this data, the Safe in Schools initiative is a perfect measure with no flaws whatsoever that will save all the children and make us look great because we took adequate action to protect the youth*. Our forward-thinking initiative has allowed for the economy to continue, as children have been kicked out of their homes and sent into a totally safe environment so their parents can continue to make wages that stagnate and refuse to increase to match the growing cost of living, especially apparent in a pandemic. That is to say, it's in no way our fault that parents need to work constantly to survive
+        <p>As can be clearly seen from this data, deaths in quebec have totally gone down thanks to the Safe in Schools initiative being a perfect measure* with no flaws whatsoever that will save all the children and make us look great because we took adequate action to protect the youth**. Our forward-thinking initiative has allowed for the economy to continue, as children have been kicked out of their homes and sent into a totally safe environment so their parents can continue to make wages that stagnate and refuse to increase to match the growing cost of living, especially apparent in a pandemic. That is to say, it's in no way our fault that parents need to work constantly to survive
           .</p>
-        <h6>*should the program be flawed we accept no accountability because it wasn't written that we'd have to deal with this</h6>
+        <h6>*should the program be flawed we accept no accountability because it wasn't written that we'd have to deal with this.</h6>
+        <h6>**we take no responsibility for the protection of the elderly or middle aged</h6>
       </article>
     </article>
 
