--- a/final/index.html
+++ b/final/index.html
@@ -7,6 +7,7 @@
   <title>Safe in schools | Gouvernement du Québec</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=ag78T6S8"></script>
 </head>
 <body>
   <header>
